assets/scss/partials/article.scss
/* Default article style */
.article-list {
    display: flex;
    flex-direction: column;

    article {
        display: flex;
        flex-direction: column;
        background-color: var(--card-background);
        box-shadow: var(--shadow-l1);
        border-radius: var(--card-border-radius);
        overflow: hidden;

        transition: box-shadow 0.3s ease;

        &:hover {
            box-shadow: var(--shadow-l2);
        }

        &:not(:last-of-type) {
            margin-bottom: var(--section-separation);
        }

        .article-image {
            img {
                width: 100%;
                height: 150px;
                object-fit: cover;

                @include respond(md) {
                    height: 200px;
                }

                @include respond(xl) {
                    height: 250px;
                }
            }
        }

        @for $i from 1 through length($defaultTagBackgrounds) {
            &:nth-child(#{length($defaultTagBackgrounds)}n + #{$i}) {
                .article-category a {
                    background: nth($defaultTagBackgrounds, $i);
                    color: nth($defaultTagColors, $i);
                }
            }
        }
    }
}

.article-details {
    display: flex;
    flex-direction: column;
    justify-content: center;

    padding: var(--card-padding);
}

.article-title {
    font-weight: 600;
    margin: 10px 0;
    color: var(--card-text-color-main);
    font-size: 2.2rem;

    @include respond(xl) {
        font-size: 2.4rem;
    }

    a {
        color: var(--card-text-color-main);

        &:hover {
            color: var(--card-text-color-main);
        }
    }

    & + .article-subtitle {
        margin-top: 0;
    }
}

.article-subtitle {
    font-weight: normal;
    color: var(--card-text-color-secondary);
    margin: 5px 0;
    line-height: 1.5;

    font-size: 1.75rem;
    @include respond(xl) {
        font-size: 2rem;
    }
}

.article-time {
    display: flex;
    align-items: center;
    color: var(--card-text-color-tertiary);
    gap: 15px;
    margin-top: 10px;
    flex-wrap: wrap;

    svg {
        vertical-align: middle;
        margin-right: 15px;
        width: 20px;
        height: 20px;
        stroke-width: 1.33;
    }

    time {
        font-size: 1.4rem;
    }

    & > div {
        display: inline-flex;
        align-items: center;
    }
}

.article-category,
.article-tags {
    a {
        color: var(--accent-color-text);
        background-color: var(--accent-color2);
        padding: 8px 16px;
        border-radius: var(--tag-border-radius);
        display: inline-block;
        font-size: 1.4rem;
        margin-right: 10px;
        margin-bottom: 10px;
        transition: background-color 0.5s ease;

        &:hover {
            color: var(--accent-color-text);
            background-color: var(--accent-color2-darker);
        }
    }
}

/* Compact style article list */
.article-list--compact {
    border-radius: var(--card-border-radius);
    box-shadow: var(--shadow-l1);
    background-color: var(--card-background);
    --image-size: 50px;
    flex-direction: column;

    @include respond(md) {
        --image-size: 60px;
    }

    & + .pagination {
        margin-top: var(--section-separation);
    }

    article {
        & > a {
            display: flex;
            align-items: center;
            padding: var(--small-card-padding);
        }

        &:not(:last-of-type) {
            border-bottom: 1.5px solid var(--card-separator-color);
        }

        .article-details {
            flex-grow: 1;
            padding: 0;
            padding-right: 15px;
            min-height: var(--image-size);
        }

        .article-title {
            margin: 0;
            font-size: 1.6rem;

            @include respond(md) {
                font-size: 1.8rem;
            }
        }

        .article-image {
            img {
                width: var(--image-size);
                height: var(--image-size);
                object-fit: cover;
                border-radius: var(--card-border-radius);
            }
        }

        .article-time {
            font-size: 1.4rem;
        }

        .article-preview {
            font-size: 1.4rem;
            color: var(--card-text-color-tertiary);
            margin-top: 10px;
            line-height: 1.5;
        }
    }
}

/* Tile style article list */
.article-list--tile {
    article {
        --tile-height: 100px;

        border-radius: var(--card-border-radius);
        overflow: hidden;
        position: relative;
        height: var(--tile-height);
        box-shadow: var(--shadow-l1);
        transition: box-shadow 0.3s ease;
        background-color: var(--card-background);

        &:hover {
            box-shadow: var(--shadow-l2);
        }

        .article-image {
            position: absolute;

            img {
                height: var(--tile-height);
                width: var(--tile-height);
                object-fit: cover;
            }
        }

        .gradient-mask {
            position: absolute;
            width: var(--tile-height);
            height: var(--tile-height);
            left: 0px;
            top: 0px;
            background: linear-gradient(90deg, rgba(255,255,255,0), rgba(255,255,255,1));
        }

        .article-details {
            border-radius: var(--card-border-radius);
            position: relative;
            height: calc(100% - 30px);
            width: 100%;
            display: flex;
            flex-direction: column;
            justify-content: flex-end;
            z-index: 2;
            padding: 15px;

            @include respond(sm) {
                padding: 20px;
            }
        }

        .article-title {
            margin: 0;
            font-size: 2.1rem;
            font-weight: 800;
            position: absolute;
            left: calc(var(--tile-height) + 15px);
            top: 15px;
            right:15px;
            color: var(--accent-color);
            word-break: break-all;
            display: -webkit-box;
            -webkit-box-orient: vertical;
            -webkit-line-clamp: 2;
            overflow: hidden;
            text-overflow: ellipsis;
        }

        .article-description {
            font-size: 1.4rem;
            position: absolute;
            left: calc(var(--tile-height) + 15px);
            right: 15px;
            top: calc(15px + 2.1rem + 15px);
            color: var(--card-text-color-main);
            display: -webkit-box;
            -webkit-box-orient: vertical;
            -webkit-line-clamp: 2;
            overflow: hidden;
            text-overflow: ellipsis;
        }
    }
}

